# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build_overrides/build.gni")
import("//build_overrides/gtest.gni")

import("//testing/test.gni")

group("googlebase") {
  deps = [
    "//base:base",
    "//base:i18n",
    "//build/config:exe_and_shlib_deps",
  ]
}